# lab-1-tree

./: CMakeLists.txt  README.md
doc/: .$SiAOD LR1 TREE.drawio.dtmp  .~lock.ЛР1_CAOД_деревья.docx#  SiAOD LR1 TREE.drawio  ЛР1_CAOД_деревья.docx  ЛР_САОД_деревья.docx
src/: Header.h  Source.cpp  main.cpp  tnode.cpp  tnode.h
